--- a/GlobalSauce/Resources/JqueryUIDatePicker.nl.resx
+++ b/GlobalSauce/Resources/JqueryUIDatePicker.nl.resx
@@ -117,25 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="closeText" xml:space="preserve">
-    <value>Close</value>
+  <data name="closeText">
+    <value>Sluiten</value>
   </data>
-  <data name="currentText" xml:space="preserve">
-    <value>Today</value>
+  <data name="currentText">
+    <value>Vandaag</value>
   </data>
-  <data name="nextText" xml:space="preserve">
-    <value>Next</value>
+  <data name="nextText">
+    <value>Volgende</value>
   </data>
-  <data name="prevText" xml:space="preserve">
-    <value>Previous</value>
+  <data name="prevText">
+    <value>Vorige</value>
   </data>
-  <data name="showMonthAfterYear" xml:space="preserve">
-    <value>false</value>
-  </data>
-  <data name="weekHeader" xml:space="preserve">
+  <data name="weekHeader">
     <value>Wk</value>
-  </data>
-  <data name="yearSuffix" xml:space="preserve">
-    <value />
   </data>
 </root>
