--- a/GlobalSauce/Resources/JqGrid.de.resx
+++ b/GlobalSauce/Resources/JqGrid.de.resx
@@ -118,204 +118,204 @@
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
 	<data name="edit_addCaption" xml:space="preserve">
-    <value>Add Record</value>
+    <value>Eintrag hinzufügen</value>
   </data>
 	<data name="edit_bCancel" xml:space="preserve">
-    <value>Cancel</value>
+    <value>Abbrechen</value>
   </data>
 	<data name="edit_bClose" xml:space="preserve">
-    <value>Close</value>
+    <value>Schließen</value>
   </data>
 	<data name="edit_bExit" xml:space="preserve">
-    <value>Cancel</value>
+    <value>Abbrechen</value>
   </data>
 	<data name="edit_bNo" xml:space="preserve">
-    <value>No</value>
+    <value>Nein</value>
   </data>
 	<data name="edit_bSubmit" xml:space="preserve">
-    <value>Submit</value>
+    <value>Senden</value>
   </data>
 	<data name="edit_bYes" xml:space="preserve">
-    <value>Yes</value>
+    <value>Ja</value>
   </data>
 	<data name="edit_editCaption" xml:space="preserve">
-    <value>Edit Record</value>
+    <value>Datensatz bearbeiten</value>
   </data>
 	<data name="edit_saveData" xml:space="preserve">
-    <value>Data has been changed! Save changes?</value>
+    <value>Daten wurde geändert! Speichern Änderungen?</value>
   </data>
 	<data name="emptyrecords" xml:space="preserve">
-    <value>No records to view</value>
+    <value>Keine Datensätze anzeigen</value>
   </data>
 	<data name="groupOps_op_and" xml:space="preserve">
-    <value>AND</value>
+    <value>UND</value>
   </data>
 	<data name="groupOps_op_or" xml:space="preserve">
     <value>OR</value>
   </data>
 	<data name="groupOps_text_and" xml:space="preserve">
-    <value>all</value>
+    <value>Alle</value>
   </data>
 	<data name="groupOps_text_or" xml:space="preserve">
-    <value>any</value>
+    <value>Alle</value>
   </data>
 	<data name="loadtext" xml:space="preserve">
-    <value>Loading...</value>
+    <value>Wird geladen...</value>
   </data>
 	<data name="odata_bn" xml:space="preserve">
-    <value>does not begin with</value>
+    <value>beginnt nicht mit</value>
   </data>
 	<data name="odata_bw" xml:space="preserve">
-    <value>begins with</value>
+    <value>beginnt mit</value>
   </data>
 	<data name="odata_cn" xml:space="preserve">
-    <value>contains</value>
+    <value>enthält</value>
   </data>
 	<data name="odata_en" xml:space="preserve">
-    <value>does not end with</value>
+    <value>endet nicht mit</value>
   </data>
 	<data name="odata_eq" xml:space="preserve">
-    <value>equal</value>
+    <value>gleich</value>
   </data>
 	<data name="odata_ew" xml:space="preserve">
-    <value>ends with</value>
+    <value>endet mit</value>
   </data>
 	<data name="odata_ge" xml:space="preserve">
-    <value>greater or equal</value>
+    <value>größer oder gleich</value>
   </data>
 	<data name="odata_gt" xml:space="preserve">
-    <value>greater</value>
+    <value>größere</value>
   </data>
 	<data name="odata_in" xml:space="preserve">
-    <value>is in</value>
+    <value>ist in</value>
   </data>
 	<data name="odata_le" xml:space="preserve">
-    <value>less or equal</value>
+    <value>kleiner oder gleich</value>
   </data>
 	<data name="odata_lt" xml:space="preserve">
-    <value>less</value>
+    <value>weniger</value>
   </data>
 	<data name="odata_nc" xml:space="preserve">
-    <value>does not contain</value>
+    <value>enthält keine</value>
   </data>
 	<data name="odata_ne" xml:space="preserve">
-    <value>not equal</value>
+    <value>nicht gleich</value>
   </data>
 	<data name="odata_ni" xml:space="preserve">
-    <value>is not in</value>
+    <value>ist nicht da</value>
   </data>
 	<data name="pgtext" xml:space="preserve">
-    <value>Page {0} of {1}</value>
+    <value>Seite {0} von {1}</value>
   </data>
 	<data name="recordtext" xml:space="preserve">
-    <value>View {0} - {1} of {2}</value>
+    <value>{0}-{1} von {2} anzeigen</value>
   </data>
 	<data name="search_caption" xml:space="preserve">
-    <value>Search...</value>
+    <value>Suche...</value>
   </data>
 	<data name="search_Find" xml:space="preserve">
-    <value>Find</value>
+    <value>Finden</value>
   </data>
 	<data name="search_Reset" xml:space="preserve">
-    <value>Reset</value>
+    <value>Zurücksetzen</value>
   </data>
 	<data name="col_bCancel" xml:space="preserve">
-    <value>Cancel</value>
+    <value>Abbrechen</value>
   </data>
 	<data name="col_bSubmit" xml:space="preserve">
-    <value>Ok</value>
+    <value>Okay</value>
   </data>
 	<data name="col_caption" xml:space="preserve">
-    <value>Select columns</value>
+    <value>Wählen Sie die Spalten</value>
   </data>
 	<data name="del_bCancel" xml:space="preserve">
-    <value>Cancel</value>
+    <value>Abbrechen</value>
   </data>
 	<data name="del_bSubmit" xml:space="preserve">
-    <value>Delete</value>
+    <value>Löschen</value>
   </data>
 	<data name="del_caption" xml:space="preserve">
-    <value>Delete</value>
+    <value>Löschen</value>
   </data>
 	<data name="del_msg" xml:space="preserve">
-    <value>Delete selected record(s) ?</value>
+    <value>Löschen Sie die ausgewählte Eintragung(en)?</value>
   </data>
 	<data name="errors_errcap" xml:space="preserve">
-    <value>Error</value>
+    <value>Fehler</value>
   </data>
 	<data name="errors_model" xml:space="preserve">
-    <value>Length of colNames&lt;&gt; colModel !</value>
+    <value>Länge des ColNames &lt;&gt;ColModel!</value>
   </data>
 	<data name="errors_norecords" xml:space="preserve">
-    <value>No records to process</value>
+    <value>Keine Daten zum Verarbeiten</value>
   </data>
 	<data name="errors_nourl" xml:space="preserve">
-    <value>Nourl is set</value>
+    <value>NoUrl wird festgelegt.</value>
   </data>
 	<data name="msg_customarray" xml:space="preserve">
-    <value>Custom function should return array!</value>
+    <value>Benutzerdefinierte Funktion sollte Array zurückgeben!</value>
   </data>
 	<data name="msg_customfcheck" xml:space="preserve">
-    <value>Custom function should be present in case of custom checking!</value>
+    <value>Benutzerdefinierte Funktion sollte bei benutzerdefinierte Überprüfung vorhanden sein!</value>
   </data>
 	<data name="msg_date" xml:space="preserve">
-    <value>Please, enter valid date value</value>
+    <value>Bitte geben Sie gültigen Datumswert</value>
   </data>
 	<data name="msg_email" xml:space="preserve">
-    <value>is not a valid e-mail</value>
+    <value>ist keine gültige e-mail</value>
   </data>
 	<data name="msg_integer" xml:space="preserve">
-    <value>Please, enter valid integer value</value>
+    <value>Bitte geben Sie gültige Integer-Wert</value>
   </data>
 	<data name="msg_maxValue" xml:space="preserve">
-    <value>value must be less than or equal to</value>
+    <value>Wert muss kleiner als oder gleich</value>
   </data>
 	<data name="msg_minValue" xml:space="preserve">
-    <value>value must be greater than or equal to</value>
+    <value>Wert muss größer als oder gleich sein.</value>
   </data>
 	<data name="msg_nodefined" xml:space="preserve">
-    <value>is not defined!</value>
+    <value>ist nicht definiert!</value>
   </data>
 	<data name="msg_novalue" xml:space="preserve">
-    <value>return value is required!</value>
+    <value>Rückgabewert ist erforderlich!</value>
   </data>
 	<data name="msg_number" xml:space="preserve">
-    <value>Please, enter valid number</value>
+    <value>Bitte geben Sie gültige Zahl</value>
   </data>
 	<data name="msg_required" xml:space="preserve">
-    <value>Field is required</value>
+    <value>Feld muss ausgefüllt werden</value>
   </data>
 	<data name="msg_url" xml:space="preserve">
-    <value>is not a valid URL. Prefix required ('http://' or 'https://')</value>
+    <value>ist keine gültige URL. Präfix erforderlich ('http://' oder 'https://')</value>
   </data>
 	<data name="nav_addtitle" xml:space="preserve">
-    <value>Add new row</value>
+    <value>Neue Zeile einfügen</value>
   </data>
 	<data name="nav_alertcap" xml:space="preserve">
-    <value>Warning</value>
+    <value>Warnung</value>
   </data>
 	<data name="nav_alerttext" xml:space="preserve">
-    <value>Please, select row</value>
+    <value>Bitte wählen Sie die Zeile</value>
   </data>
 	<data name="nav_deltitle" xml:space="preserve">
-    <value>Delete selected row</value>
+    <value>Ausgewählte Zeile löschen</value>
   </data>
 	<data name="nav_edittitle" xml:space="preserve">
-    <value>Edit selected row</value>
+    <value>Ausgewählte Zeile bearbeiten</value>
   </data>
 	<data name="nav_refreshtitle" xml:space="preserve">
-    <value>Reload Grid</value>
+    <value>Reload-Raster</value>
   </data>
 	<data name="nav_searchtitle" xml:space="preserve">
-    <value>Find records</value>
+    <value>Suchen von Datensätzen</value>
   </data>
 	<data name="nav_viewtitle" xml:space="preserve">
-    <value>View selected row</value>
+    <value>Ansicht ausgewählten Zeile</value>
   </data>
 	<data name="view_bclose" xml:space="preserve">
-    <value>Close</value>
+    <value>Schließen</value>
   </data>
 	<data name="view_caption" xml:space="preserve">
-    <value>View Record</value>
+    <value>Ansicht-Datensatz</value>
   </data>
 </root>
