--- a/GlobalSauce/Resources/JqGrid.pl.resx
+++ b/GlobalSauce/Resources/JqGrid.pl.resx
@@ -118,204 +118,204 @@
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
 	<data name="edit_addCaption" xml:space="preserve">
-    <value>Add Record</value>
+    <value>Dodać rekord</value>
   </data>
 	<data name="edit_bCancel" xml:space="preserve">
-    <value>Cancel</value>
+    <value>Anuluj</value>
   </data>
 	<data name="edit_bClose" xml:space="preserve">
-    <value>Close</value>
+    <value>Zamknij</value>
   </data>
 	<data name="edit_bExit" xml:space="preserve">
-    <value>Cancel</value>
+    <value>Anuluj</value>
   </data>
 	<data name="edit_bNo" xml:space="preserve">
-    <value>No</value>
+    <value>Nr</value>
   </data>
 	<data name="edit_bSubmit" xml:space="preserve">
-    <value>Submit</value>
+    <value>Prześlij</value>
   </data>
 	<data name="edit_bYes" xml:space="preserve">
-    <value>Yes</value>
+    <value>Tak</value>
   </data>
 	<data name="edit_editCaption" xml:space="preserve">
-    <value>Edit Record</value>
+    <value>Edytować rekord</value>
   </data>
 	<data name="edit_saveData" xml:space="preserve">
-    <value>Data has been changed! Save changes?</value>
+    <value>Dane zostały zmienione! Czy zapisać zmiany?</value>
   </data>
 	<data name="emptyrecords" xml:space="preserve">
-    <value>No records to view</value>
+    <value>Żadnych rekordów do wyświetlenia</value>
   </data>
 	<data name="groupOps_op_and" xml:space="preserve">
-    <value>AND</value>
+    <value>I</value>
   </data>
 	<data name="groupOps_op_or" xml:space="preserve">
-    <value>OR</value>
+    <value>LUB</value>
   </data>
 	<data name="groupOps_text_and" xml:space="preserve">
-    <value>all</value>
+    <value>wszystkie</value>
   </data>
 	<data name="groupOps_text_or" xml:space="preserve">
-    <value>any</value>
+    <value>wszelkie</value>
   </data>
 	<data name="loadtext" xml:space="preserve">
-    <value>Loading...</value>
+    <value>Ładowanie...</value>
   </data>
 	<data name="odata_bn" xml:space="preserve">
-    <value>does not begin with</value>
+    <value>nie zaczyna się od</value>
   </data>
 	<data name="odata_bw" xml:space="preserve">
-    <value>begins with</value>
+    <value>zaczyna się od</value>
   </data>
 	<data name="odata_cn" xml:space="preserve">
-    <value>contains</value>
+    <value>zawiera</value>
   </data>
 	<data name="odata_en" xml:space="preserve">
-    <value>does not end with</value>
+    <value>nie kończy się</value>
   </data>
 	<data name="odata_eq" xml:space="preserve">
-    <value>equal</value>
+    <value>równe</value>
   </data>
 	<data name="odata_ew" xml:space="preserve">
-    <value>ends with</value>
+    <value>kończy się</value>
   </data>
 	<data name="odata_ge" xml:space="preserve">
-    <value>greater or equal</value>
+    <value>większe lub równe</value>
   </data>
 	<data name="odata_gt" xml:space="preserve">
-    <value>greater</value>
+    <value>większa</value>
   </data>
 	<data name="odata_in" xml:space="preserve">
-    <value>is in</value>
+    <value>jest w</value>
   </data>
 	<data name="odata_le" xml:space="preserve">
-    <value>less or equal</value>
+    <value>mniejsze lub równe</value>
   </data>
 	<data name="odata_lt" xml:space="preserve">
-    <value>less</value>
+    <value>mniej</value>
   </data>
 	<data name="odata_nc" xml:space="preserve">
-    <value>does not contain</value>
+    <value>nie zawierają</value>
   </data>
 	<data name="odata_ne" xml:space="preserve">
-    <value>not equal</value>
+    <value>nie równe</value>
   </data>
 	<data name="odata_ni" xml:space="preserve">
-    <value>is not in</value>
+    <value>nie jest w</value>
   </data>
 	<data name="pgtext" xml:space="preserve">
-    <value>Page {0} of {1}</value>
+    <value>{0} Strona o {1}</value>
   </data>
 	<data name="recordtext" xml:space="preserve">
-    <value>View {0} - {1} of {2}</value>
+    <value>Zobacz {0}-{1} z {2}</value>
   </data>
 	<data name="search_caption" xml:space="preserve">
-    <value>Search...</value>
+    <value>Szukaj...</value>
   </data>
 	<data name="search_Find" xml:space="preserve">
-    <value>Find</value>
+    <value>Znajdź</value>
   </data>
 	<data name="search_Reset" xml:space="preserve">
-    <value>Reset</value>
+    <value>Badanie</value>
   </data>
 	<data name="col_bCancel" xml:space="preserve">
-    <value>Cancel</value>
+    <value>Anuluj</value>
   </data>
 	<data name="col_bSubmit" xml:space="preserve">
     <value>Ok</value>
   </data>
 	<data name="col_caption" xml:space="preserve">
-    <value>Select columns</value>
+    <value>Wybierz kolumny</value>
   </data>
 	<data name="del_bCancel" xml:space="preserve">
-    <value>Cancel</value>
+    <value>Anuluj</value>
   </data>
 	<data name="del_bSubmit" xml:space="preserve">
-    <value>Delete</value>
+    <value>Usuń</value>
   </data>
 	<data name="del_caption" xml:space="preserve">
-    <value>Delete</value>
+    <value>Usuń</value>
   </data>
 	<data name="del_msg" xml:space="preserve">
-    <value>Delete selected record(s) ?</value>
+    <value>Usuń zaznaczone rekordy?</value>
   </data>
 	<data name="errors_errcap" xml:space="preserve">
-    <value>Error</value>
+    <value>Błąd</value>
   </data>
 	<data name="errors_model" xml:space="preserve">
-    <value>Length of colNames&lt;&gt; colModel !</value>
+    <value>Długość colNames &lt;&gt;colModel!</value>
   </data>
 	<data name="errors_norecords" xml:space="preserve">
-    <value>No records to process</value>
+    <value>Żadnych rekordów do procesu</value>
   </data>
 	<data name="errors_nourl" xml:space="preserve">
-    <value>Nourl is set</value>
+    <value>Nourl to zestaw</value>
   </data>
 	<data name="msg_customarray" xml:space="preserve">
-    <value>Custom function should return array!</value>
+    <value>Funkcja niestandardowa powinna zwracać tablicę!</value>
   </data>
 	<data name="msg_customfcheck" xml:space="preserve">
-    <value>Custom function should be present in case of custom checking!</value>
+    <value>Funkcja niestandardowa powinny być obecne w przypadku niestandardowych sprawdzanie!</value>
   </data>
 	<data name="msg_date" xml:space="preserve">
-    <value>Please, enter valid date value</value>
+    <value>Podaj wartość prawidłowa data</value>
   </data>
 	<data name="msg_email" xml:space="preserve">
-    <value>is not a valid e-mail</value>
+    <value>jest nie prawidłowy adres e-mail</value>
   </data>
 	<data name="msg_integer" xml:space="preserve">
-    <value>Please, enter valid integer value</value>
+    <value>Podaj prawidłową wartością całkowitą</value>
   </data>
 	<data name="msg_maxValue" xml:space="preserve">
-    <value>value must be less than or equal to</value>
+    <value>wartość musi być mniejsza niż lub równa</value>
   </data>
 	<data name="msg_minValue" xml:space="preserve">
-    <value>value must be greater than or equal to</value>
+    <value>wartość musi być większa lub równa</value>
   </data>
 	<data name="msg_nodefined" xml:space="preserve">
-    <value>is not defined!</value>
+    <value>nie zdefiniowano!</value>
   </data>
 	<data name="msg_novalue" xml:space="preserve">
-    <value>return value is required!</value>
+    <value>wartość zwracana jest wymagane!</value>
   </data>
 	<data name="msg_number" xml:space="preserve">
-    <value>Please, enter valid number</value>
+    <value>Wprowadź prawidłowy numer</value>
   </data>
 	<data name="msg_required" xml:space="preserve">
-    <value>Field is required</value>
+    <value>Pole jest wymagane</value>
   </data>
 	<data name="msg_url" xml:space="preserve">
-    <value>is not a valid URL. Prefix required ('http://' or 'https://')</value>
+    <value>jest nie prawidłowy adres URL. Prefiks wymagane ('http://' lub 'https://')</value>
   </data>
 	<data name="nav_addtitle" xml:space="preserve">
-    <value>Add new row</value>
+    <value>Dodać nowy wiersz</value>
   </data>
 	<data name="nav_alertcap" xml:space="preserve">
-    <value>Warning</value>
+    <value>Ostrzeżenie</value>
   </data>
 	<data name="nav_alerttext" xml:space="preserve">
-    <value>Please, select row</value>
+    <value>Wybierz wiersz</value>
   </data>
 	<data name="nav_deltitle" xml:space="preserve">
-    <value>Delete selected row</value>
+    <value>Usunięcie zaznaczonego wiersza</value>
   </data>
 	<data name="nav_edittitle" xml:space="preserve">
-    <value>Edit selected row</value>
+    <value>Edytuj wybrany wiersz</value>
   </data>
 	<data name="nav_refreshtitle" xml:space="preserve">
-    <value>Reload Grid</value>
+    <value>Przeładuj siatki</value>
   </data>
 	<data name="nav_searchtitle" xml:space="preserve">
-    <value>Find records</value>
+    <value>Znajdowanie rekordów</value>
   </data>
 	<data name="nav_viewtitle" xml:space="preserve">
-    <value>View selected row</value>
+    <value>Widok wybrany wiersz</value>
   </data>
 	<data name="view_bclose" xml:space="preserve">
-    <value>Close</value>
+    <value>Zamknij</value>
   </data>
 	<data name="view_caption" xml:space="preserve">
-    <value>View Record</value>
+    <value>Zobacz zapis</value>
   </data>
 </root>
