--- a/GlobalSauce/Resources/JqueryUITimePicker.es.resx
+++ b/GlobalSauce/Resources/JqueryUITimePicker.es.resx
@@ -118,21 +118,33 @@
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
 	<data name="closeText" xml:space="preserve">
-    <value>Close</value>
+    <value>Hecho</value>
   </data>
 	<data name="currentText" xml:space="preserve">
-    <value>Today</value>
+    <value>Ahora</value>
   </data>
-	<data name="nextText" xml:space="preserve">
-    <value>Next</value>
+	<data name="hourText" xml:space="preserve">
+    <value>Hora</value>
   </data>
-	<data name="prevText" xml:space="preserve">
-    <value>Previous</value>
+	<data name="microsecText" xml:space="preserve">
+    <value>Microsegundo</value>
   </data>
-	<data name="showMonthAfterYear" xml:space="preserve">
-    <value>false</value>
+	<data name="millisecText" xml:space="preserve">
+    <value>Milisegundo</value>
   </data>
-	<data name="weekHeader" xml:space="preserve">
-    <value>Wk</value>
+	<data name="minuteText" xml:space="preserve">
+    <value>Minuto</value>
+  </data>
+	<data name="secondText" xml:space="preserve">
+    <value>Segundo</value>
+  </data>
+	<data name="timeOnlyTitle" xml:space="preserve">
+    <value>Tiempo de elegir</value>
+  </data>
+	<data name="timeText" xml:space="preserve">
+    <value>Tiempo</value>
+  </data>
+	<data name="timezoneText" xml:space="preserve">
+    <value>Zona horaria</value>
   </data>
 </root>
